--- a/apps/playground/index.html
+++ b/apps/playground/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mirrorful-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      property="og:description"
+      content="Build, manage, publish your design system."
+      key="description"
+    />
+    <meta
+      property="og:image"
+      content="https://mirrorful-production.s3.us-west-1.amazonaws.com/assets/Playground.png"
+      key="image"
+    />
+    <title>Mirrorful Playground</title>
   </head>
   <body>
     <div id="root"></div>
